--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,14 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
-server.port=8080
+#server.port=8080
 security.ignored=/**
 
-spring.mvc.view.prefix: /WEB-INF/public/
-spring.mvc.view.suffix: .jsp
+spring.thymeleaf.cache=false
+#spring.mvc.view.prefix: /WEB-INF/public/
+#spring.mvc.view.suffix: .jsp
+
+#spring.datasource.type=org.apache.commons.dbcp.BasicDataSource
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.data.jpa.repositories.enabled=true
